# spleeter

./: pyproject.toml
spleeter/: separator.py
spleeter/audio/: adapter.py  ffmpeg.py
