[project]
name = "spleeter"
version = "2.4.2"
description = "The Deezer source separation library with pretrained models based on tensorflow."
authors = [{ name = "Deezer Research", email = "spleeter@deezer.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "ffmpeg-python>=0.2.0,<0.3",
    "httpx[http2]>=0.19.0,<0.20",
    "typer>=0.3.2,<0.4",
    "tensorflow-io-gcs-filesystem==0.32.0",
    "tensorflow==2.12.1",
    "pandas>=1.3.0,<2",
    "norbert>=0.2.1,<0.3",
    "numpy<2.0.0",
]

[project.optional-dependencies]
evaluation = [
    "musdb>=0.4.0,<0.5",
    "museval>=0.4.0,<0.5",
]

[project.urls]
Homepage = "https://github.com/deezer/spleeter"
Repository = "https://github.com/deezer/spleeter"

[project.scripts]
spleeter = "spleeter.__main__:entrypoint"

[dependency-groups]
dev = [
    "pytest>=6.2.1,<7",
    "isort>=5.7.0,<6",
    "black>=21.7b0,<22",
    "mypy>0.790,<1.0",
    "flake8>=5.0.0,<6",
    "pytest-forked>=1.3.0,<2",
    "musdb>=0.4.0,<0.5",
    "museval>=0.4.0,<0.5",
]

[tool.uv]

[tool.uv.build-backend]
module-name = "spleeter"
module-root = ""
source-include = [
    "LICENSE",
    "spleeter/resources/*.json",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-W ignore::FutureWarning -W ignore::DeprecationWarning -vv --forked"
